fix: Resolve spacing between devices

--- a/src/pages/ViewDeviceData/style.scss
+++ b/src/pages/ViewDeviceData/style.scss
@@ -1,4 +1,6 @@
 .view-device-data {
+    margin-bottom: 45px;
+    
     .heading {
         h4 {
             opacity: 0.3;
